# docker-agentic-harness-sandbox

./: .env.example  .gitignore  Dockerfile  README.md  agent-session.sh  compose.yml  docusaurus.config.js  entrypoint.sh  package-lock.json  package.json  sidebars.js  start.sh  upload-server.js
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml
config/: AGENTS.md  litellm-config.yaml  omp-AGENTS.md  omp-config.yml  omp-models.yml  omp-settings.json  opencode-with-vllm-side.json  opencode.json  tmux.conf
config/claude/: CLAUDE.md  settings.json
config/omp/: AGENTS.md  config.yml  models.yml
docs/: architecture.md  configuration.md  development.md  directory-structure.md  getting-started.md  introduction.md  security.md  tools-and-skills.md  troubleshooting.md  using-the-sandbox.md
harness-proxy/: Cargo.toml  Dockerfile  PLAN.md  README.md  build-image.sh
harness-proxy/src/: main.rs  openai.rs  stream.rs  translate.rs
headroom/: Dockerfile
ideas/: bifrost-reasoning-item.patch  browser-terminal-with-image-paste.md  deepseek-thinking-block-bug.md  dynamic-models.md  headroom-spike-results.md
includes/: colors.sh  config.sh  model.sh  security.sh  services.sh  tools.sh  user.sh
patches/: wetty-clipboard.js  wetty-font.js  wetty-theme.js
scripts/: agent-session.sh  analyze-image.js  claude-shim.js  cleanup.sh  entrypoint.sh  reasoning-normalizer.js  reset-sandbox.sh
tests/: bench-context-toksec.sh  test-claude-shim.js  test-headroom-interactions-live.sh  test-reasoning-normalizer-live.sh  test-reasoning-normalizer.js  test-wetty-clipboard.js
(+8 files in other folders)
