[package]
name = "harness-proxy"
version = "0.1.0"
edition = "2021"
description = "Anthropic Messages -> OpenAI (vLLM) translating proxy. Replaces LiteLLM + claude-shim.js (issue #10)."

[dependencies]
# axum 0.7 — only the stable Router/serve/Json surface is used; safe to bump to 0.8 later.
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde_json = "1"
# reqwest (rustls-tls) + serde derive land in Step 2 when we actually call vLLM. See PLAN.md.

[profile.release]
# Small, static, single-purpose proxy — optimize for size and a clean FROM scratch image.
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
